# intersection

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.rs  docker-compose.yml  log4rs.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.yml  feat.yml
.github/workflows/: build.yml  ci.yml  clippy.yml  fmt.yml  test.yml
migrations/2023-03-16-184952_create_guilds/: up.sql
migrations/2023-03-17-191246_add_default_prefix/: down.sql  up.sql
src/: commands.rs  drql.rs  drql_reducer.rs  extensions.rs  main.rs  models.rs  parser.lalrpop  resolver.rs  schema.rs  util.rs
src/commands/: about.rs  debug.rs  dry_run.rs  ping.rs  version.rs
src/commands/about/: README.md  drql.rs  drql_1.md  drql_2.md  how_it_works.md  how_it_works.rs  intersection.rs  intersection_1.md  intersection_2.md  landing.md  landing.rs  set_theory.md  set_theory.rs
src/drql/: ast.rs  interpreter.rs  lexer.rs  parser.rs  scanner.rs
src/models/: mention.rs
src/util/: chunk_str_vec_into_max_size.rs  mention_application_command.rs  unionize_set.rs  wrap_string_vec.rs
