[package]
name = "intersection"
# Exposed publicly in /version and /about how_it_works. Might cause broken markdown output if left blank.
repository = "https://github.com/intersection-project/intersection/"
description = "Mass pinging, but targeted 😏"
license = "AGPL-3.0"
keywords = ["discord", "discord-bot", "discord-mentions", "set-theory"]
categories = ["parser-implementations"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-recursion = "1.0.5"
bitvec = "1.0.1"
chrono = "0.4.33"
dotenvy = "0.15.7"
lalrpop-util = "0.20.1"
lazy_static = "1.4.0"
logos = "0.13.0"
poise = "0.5.7"
regex = "1.10.3"
tap = "1.0.1"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
built = { version = "0.6.1", features = ["git2", "chrono"] }
lalrpop = { version = "0.20.1", default-features = false }
